[tool.poetry]
name = "neuroph-jl"
version = "0.1.0"
description = ""
authors = ["mbyamaguchi <hayama.hika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.5"
polars = "^1.5.0"
plotly = "^5.23.0"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
seaborn = "^0.13.2"
numpy = "^2.1.0"
scikit-learn = "^1.5.1"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchtext = "^0.18.0"
torchviz = "^0.0.2"
torchinfo = "^1.8.0"
torchaudio = "^2.4.0"
jupyterlab-code-formatter = "^3.0.2"
black = "^24.8.0"
isort = "^5.13.2"
pillow = "^10.4.0"
webcolors = "^24.8.0"
tkinterdnd2 = "^0.4.2"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
